# django-tinymce4-widget

./: .codespellrc  .flake8  .pre-commit-config.yaml  .pyup.yml  .readthedocs.yml  .stickler.yml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md  README.rst  metadata.py  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  requirements_dev.txt  requirements_lint.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini
.github/: config.yml
.github/workflows/: automerge.yml  ci.yml  commitlint.yml  hacktoberfest.yml  issue-manager.yml  labels.yml  lint.yml  poetry-upgrade.yml  pre-commit-autoupdate.yml  semantic-release.yml  test.yml
docs/: Makefile  advanced.md  advanced.rst  conf.py  configuration.md  configuration.rst  index.md  index.rst  installation.md  installation.rst  make.bat  requirements.in  requirements.txt  test.md  test.rst  usage.md  usage.rst
src/tinymce/: __init__.py  apps.py  models.py  settings.py  views.py  widgets.py
templates/: .changelog-old.md  CHANGELOG.md.j2
test_tinymce/: apps.py  models.py  settings.py  tests.py  urls.py  views.py
test_tinymce/migrations/: 0001_initial.py
tests/: settings.py  test_tinymce.py  urls.py
tests/testapp/: admin.py  models.py  views.py
tests/testapp/migrations/: 0001_initial.py
tests/testapp/templates/test_tinymce/: create.html
tinymce/: __init__.py  models.py  settings.py  urls.py  views.py  widgets.py
