[metadata]
name = django-tinymce4-widget
version = attr: tinymce.__version__
author = Bruno Alla
author_email = alla.brunoo@gmail.com
description = A Django application that provides a TinyMCE 4 editor widget without any static files.
license = MIT license
license_file = LICENSE.txt
long_description = file:README.md
long_description_content_type = text/markdown
keywords = django, wysiwyg, widget, tinymce
url = https://github.com/browniebroke/django-tinymce4-widget
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Web Environment
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Framework :: Django
	Framework :: Django :: 1.11
	Framework :: Django :: 2.0
	Framework :: Django :: 2.1
	Framework :: Django :: 2.2
	Framework :: Django :: 3.0
	Framework :: Django :: 3.1
	Topic :: Software Development :: Libraries :: Application Frameworks
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Text Editors
	Topic :: Text Processing
	Topic :: Text Processing :: Markup
	Topic :: Text Processing :: Markup :: HTML

[options]
python_requires = >=3.5
packages = find:
include_package_data = true
zip_safe = false

[options.packages.find]
include =
	tinymce
	tinymce.*

[semantic_release]
version_variable = tinymce/__init__.py:__version__

[flake8]
ignore = D203
exclude = 
	.git,
	.tox,
	docs/conf.py,
	build,
	dist
max-line-length = 88

[tool:isort]
profile = black
known_first_party = test_tinymce,tinymce

[coverage:run]
branch = true

[coverage:report]
omit =
    *site-packages*
    *tests*
    *.tox*
    *conftest*
show_missing = True
exclude_lines =
    raise NotImplementedError
